--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,12 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.2.2"
+        classpath 'com.android.tools.build:gradle:8.5.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
 
-        classpath 'com.google.gms:google-services:4.3.8'  // Google Services plugin
+        classpath 'com.google.gms:google-services:4.3.15'  // Google Services plugin
 
     }
 }
